nullaway_error_6CB098A4-3A2F-43D6-AA8E-C2EB09BF56A7.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-webmvc/src/main/java/org/springframework/web/servlet/mvc/method/annotation/AbstractMessageConverterMethodArgumentResolver.java:185: error: [NullAway] passing @Nullable parameter 'targetClass' where @NonNull is required
								((HttpMessageConverter<T>) converter).read(targetClass, msgToUse));
								                                           ^
    (see http://t.uber.com/nullaway )
